--- a/backend-setup/redis-service.yaml
+++ b/backend-setup/redis-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: redis-lb
   namespace: backend
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 6379
     protocol: TCP
