--- a/frontend-setup/myapp-deployment.yml
+++ b/frontend-setup/myapp-deployment.yml
@@ -17,9 +17,14 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: thirukkumaran/hit-counter:latest
+        image: thirukkumaran/counter-app:latest
         ports:
         - containerPort: 5000
+        env:
+        - name: REDIS_HOST
+          value: "192.168.99.100"
+        - name: REDIS_PORT
+          value: "30002"
         resources:
           requests:
             memory: "64Mi"
