--- a/frontend-setup/myapp-services.yml
+++ b/frontend-setup/myapp-services.yml
@@ -4,7 +4,7 @@ metadata:
   name: myapp-lb
   namespace: frontend
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 80
     protocol: TCP
