--- a/frontend-setup/frontend-services.yml
+++ b/frontend-setup/frontend-services.yml
@@ -3,8 +3,10 @@ kind: Service
 metadata:
   name: myapp-lb
   namespace: frontend
+  annotations:
+    kubernetes.io/ingress.class: alb
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 80
     protocol: TCP
